# crossy

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  main.cpp  setup-uwrmaxsat.sh  uwrmaxsat.patch
src/common/: crossings.cpp  crossings.hpp  instance.cpp  instance.hpp  macros.hpp  penalty_graph.cpp  penalty_graph.hpp  segtree.hpp
src/exact/: exact.cpp  exact.hpp  kobayashi_tamaki.hpp  maxsat.cpp
src/graph/: base_cycles.cpp  chordless_cycles.cpp  graph.hpp  scc.cpp  topo.cpp  utils.cpp
src/heuristic/: barycenter.cpp  greedyswitch.cpp  heuristic.hpp  median.cpp  quick.cpp
src/reduction/: components.cpp  isolated.cpp  merge_twins.cpp  reduction.hpp  subgraph.cpp
tests/: chktests  fuzz.py  preprocess-cutwidth.py  requirements.txt  run-tests.py  validate.ctd
tests/cutwidth-private/: 101.gr  102.gr  103.gr  104.gr  105.gr  106.gr  107.gr  108.gr  109.gr  110.gr  111.gr  112.gr  113.gr  114.gr  115.gr  116.gr  117.gr  118.gr  119.gr  120.gr  121.gr  122.gr  123.gr  124.gr  125.gr  126.gr  127.gr  128.gr  129.gr  130.gr  131.gr  132.gr  133.gr  134.gr  135.gr  136.gr  137.gr  138.gr  139.gr  140.gr  (+60 more)
tests/cutwidth-public/: 1.gr
tests/cutwidth-public-preprocessed/: 1.gr  1.sol  10.gr  10.sol  100.gr  100.sol  101.gr  101.sol  102.gr  102.sol  103.gr  103.sol  104.gr  104.sol  105.gr  105.sol  106.gr  106.sol  107.gr  107.sol  108.gr  108.sol  109.gr  109.sol  11.gr  11.sol  110.gr  110.sol  111.gr  111.sol  112.gr  112.sol  113.gr  113.sol  114.gr  114.sol  115.gr  115.sol  116.gr  116.sol  (+210 more)
tests/exact-private/: 101.gr  102.gr  103.gr  104.gr  105.gr  106.gr  107.gr  108.gr  109.gr  110.gr  111.gr  112.gr  113.gr  117.gr  119.gr  120.gr  121.gr  122.gr  123.gr  124.gr  125.gr  126.gr  127.gr  128.gr  129.gr  130.gr  131.gr  132.gr  133.gr  134.gr  135.gr  136.gr  137.gr  138.gr  139.gr  140.gr  141.gr  142.gr  143.gr  144.gr  (+55 more)
tests/exact-public/: 100.sol  12.sol  18.sol  19.sol  20.sol  21.sol  22.sol  23.sol  24.sol  25.sol  26.sol  27.sol  28.sol  29.sol  30.sol  31.sol  32.sol  33.sol  34.sol  35.sol  36.sol  37.sol  38.sol  39.sol  40.sol  41.sol  42.sol  43.sol  44.sol  45.sol  46.sol  47.sol  48.sol  49.sol  50.sol  51.sol  52.sol  53.sol  54.sol  55.sol  (+35 more)
tests/heuristic-private/: 101.gr  102.gr  103.gr  104.gr  105.gr  106.gr  108.gr  109.gr  110.gr  111.gr  112.gr  113.gr  114.gr  115.gr  116.gr  117.gr  118.gr  119.gr  120.gr  121.gr  122.gr  123.gr  124.gr  125.gr  126.gr  127.gr  128.gr  129.gr  130.gr  131.gr  132.gr  133.gr  134.gr  135.gr  136.gr  137.gr  138.gr  139.gr  140.gr  141.gr  (+58 more)
tests/heuristic-public/: 1.gr  10.gr  10.sol  100.gr  11.gr  12.gr  13.gr  14.gr  14.sol  15.sol  16.gr  17.gr  18.gr  2.gr  20.gr  21.gr  22.gr  23.gr  24.gr  25.gr  26.gr  27.gr  28.gr  29.gr  3.gr  30.gr  31.gr  32.gr  33.gr  34.gr  35.gr  36.gr  37.gr  38.gr  4.gr  41.gr  42.gr  43.gr  45.gr  46.gr  (+55 more)
tests/stress/: cutwidth.gr  multiedges.gr  no-edges.gr
tests/tiny_test_set/: grid_9_shuffled.sol  ladder_4_4_shuffled.sol  star_6.sol  tree_6_10.sol  website_20.sol
